@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-08-14T00:33:06Z",
+  "timestamp" : "2022-08-17T00:34:34Z",
   "count_outdated" : 604,
   "uniques_outdated" : 118,
-  "count" : 606,
-  "uniques" : 119,
+  "count" : 607,
+  "uniques" : 120,
   "views" : [
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
